EXTRA_DIST =					\
	compare_table.pl			\
	chan3.cepview				\
	chan3-dither.cepview			\
	chan3.logspec				\
	chan3-logspec.cepview			\
	chan3.mfc				\
	chan3.raw                               \
	test-tutorial.sh                        \
        crontab

CLEANFILES =					\
	test-cepview.err			\
	test-cepview.out			\
	test-sphinx_fe-dither-seed.cepview.out	\
	test-sphinx_fe-dither-seed.mfc.out	\
	test-sphinx_fe-dither-seed.out		\
	test-sphinx_fe-logspec.cepview.out	\
	test-sphinx_fe-logspec.mfc.out		\
	test-sphinx_fe-logspec.out		\
	test-sphinx_fe.out			\
	test-sphinx_fe.mfc			\
	test-sphinx_fe.cepview

TESTS = $(wildcard test-*.sh)
