add_subdirectory(test_alloc)
#add_subdirectory(test_bitvec)
#add_subdirectory(test_case)
#add_subdirectory(test_cmdln)
#add_subdirectory(test_fe)
#add_subdirectory(test_feat)
#add_subdirectory(test_fsg)
#add_subdirectory(test_hash)
#add_subdirectory(test_lineiter)
#add_subdirectory(test_logmath)
#add_subdirectory(test_matrix)
#add_subdirectory(test_ngram)
#add_subdirectory(test_string)
#add_subdirectory(test_thread)
#add_subdirectory(test_util)